Switch to maintained openjdk nashorn