@@ -1,7 +1,7 @@
 package com.clubobsidian.obbylang.manager.bukkit.command;
 
 import com.clubobsidian.obbylang.manager.command.SenderWrapper;
-import jdk.nashorn.api.scripting.ScriptObjectMirror;
+import org.openjdk.nashorn.api.scripting.ScriptObjectMirror;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandExecutor;
 import org.bukkit.command.CommandSender;
