@@ -2,7 +2,7 @@ package com.clubobsidian.obbylang.manager.command;
 
 import com.clubobsidian.obbylang.ObbyLang;
 import com.clubobsidian.obbylang.manager.RegisteredManager;
-import jdk.nashorn.api.scripting.ScriptObjectMirror;
+import org.openjdk.nashorn.api.scripting.ScriptObjectMirror;
 
 import java.util.ArrayList;
 import java.util.HashMap;
