@@ -1,7 +1,7 @@
 package com.clubobsidian.obbylang.manager.command;
 
 import com.clubobsidian.obbylang.ObbyLang;
-import jdk.nashorn.api.scripting.ScriptObjectMirror;
+import org.openjdk.nashorn.api.scripting.ScriptObjectMirror;
 
 public abstract class CommandWrapperManager<T> {
 
