@@ -1,7 +1,7 @@
 package com.clubobsidian.obbylang.discord.manager.command;
 
 import com.clubobsidian.obbylang.manager.command.CommandWrapper;
-import jdk.nashorn.api.scripting.ScriptObjectMirror;
+import org.openjdk.nashorn.api.scripting.ScriptObjectMirror;
 
 public class DiscordCommandWrapper extends CommandWrapper<DiscordCommand> {
 
