@@ -3,7 +3,7 @@ package com.clubobsidian.obbylang.manager.velocity.command;
 import com.clubobsidian.obbylang.manager.command.SenderWrapper;
 import com.velocitypowered.api.command.Command;
 import com.velocitypowered.api.command.CommandSource;
-import jdk.nashorn.api.scripting.ScriptObjectMirror;
+import org.openjdk.nashorn.api.scripting.ScriptObjectMirror;
 
 import java.util.HashMap;
 import java.util.Map;
