@@ -2,7 +2,7 @@ package com.clubobsidian.obbylang.manager.velocity.command;
 
 import com.clubobsidian.obbylang.manager.command.CommandWrapper;
 import com.velocitypowered.api.command.Command;
-import jdk.nashorn.api.scripting.ScriptObjectMirror;
+import org.openjdk.nashorn.api.scripting.ScriptObjectMirror;
 
 public class VelocityCommandWrapper extends CommandWrapper<Command> {
 
